odh-dashboard/overlays/service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: odh-dashboard
spec:
  gateways:
  - odh-gateway
  hosts:
  - "opendatahub.apps-crc.testing"
  http:
  - route:
    - destination:
        host: odh-dashboard
        port:
          number: 80
